--- a/index.html
+++ b/index.html
@@ -3,20 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Masud's Portfolio</title>
+    <meta name="description" content="Portfolio of Masud Reza" />
+    <meta name="author" content="Masud Reza" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Masud Reza – Senior Fullstack Engineer" />
+    <meta property="og:description" content="Portfolio of Masud Reza – React, Node.js, MongoDB, Next.js, AWS, SQL" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://res.cloudinary.com/dnbr24n7i/image/upload/v1767872151/profile_xibntq.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
   </head>
 
   <body>
